...
import androidx.compose.ui.unit.dp
import androidx.lifecycle.viewmodel.compose.viewModel
import com.android.universe.model.CountryData.allCountries

object AddProfileScreenTestTags {
  // Username
  const val USERNAME_TEXT = "username_text"
  const val USERNAME_FIELD = "username_field"
  const val USERNAME_ERROR = "username_error"

  // First Name
  const val FIRST_NAME_TEXT = "first_name_text"
  const val FIRST_NAME_FIELD = "first_name_field"
  const val FIRST_NAME_ERROR = "first_name_error"

  // Last Name
  const val LAST_NAME_TEXT = "last_name_text"
  const val LAST_NAME_FIELD = "last_name_field"
  const val LAST_NAME_ERROR = "last_name_error"

  // Description
  const val DESCRIPTION_TEXT = "description_text"
  const val DESCRIPTION_FIELD = "description_field"
  const val DESCRIPTION_ERROR = "description_error"

  // Country
  const val COUNTRY_TEXT = "country_text"
  const val COUNTRY_FIELD = "country_field"
  const val COUNTRY_DROPDOWN_ITEM_PREFIX = "country_item_"

  // Date of birth
  const val DATE_OF_BIRTH_TEXT = "date_of_birth_text"

  // Day
  const val DAY_FIELD = "day_field"
  const val DAY_ERROR_EMPTY = "day_error_empty"
  const val DAY_ERROR_NUMBER = "day_error_number"

  // Month
  const val MONTH_FIELD = "month_field"
  const val MONTH_ERROR_EMPTY = "month_error_empty"
  const val MONTH_ERROR_NUMBER = "month_error_number"

  // Year
  const val YEAR_FIELD = "year_field"
  const val YEAR_ERROR_EMPTY = "year_error_empty"
  const val YEAR_ERROR_NUMBER = "year_error_number"

  // Save button
  const val SAVE_BUTTON = "save_button"
}

/**
 * Composable screen that allows a user to create a new Profile.
 *
 * This screen collects user input for all profile fields (username, name, description, country and
...
