...
/**
 * Defines constants for use in UI tests to identify specific composables within the
 * AddProfileScreen. This helps create robust and readable tests.
 */
object AddProfileScreenTestTags {
  // Username
  const val USERNAME_FIELD = "username_field"
  const val USERNAME_ERROR = "username_error"

  // First Name
  const val FIRST_NAME_FIELD = "first_name_field"
  const val FIRST_NAME_ERROR = "first_name_error"

  // Last Name
  const val LAST_NAME_FIELD = "last_name_field"
  const val LAST_NAME_ERROR = "last_name_error"

  // Description
  const val DESCRIPTION_FIELD = "description_field"
  const val DESCRIPTION_ERROR = "description_error"

  // Date of birth
  const val DATE_OF_BIRTH_TEXT = "date_of_birth_text"
  const val DATE_OF_BIRTH_BUTTON = "date_of_birth_button"

  // Save button
  const val SAVE_BUTTON = "save_button"

  const val IMAGE = "image"
...
